first mvp without email service
