# internal/model/auth.go
@@ -13,5 +13,12 @@ type TokenPair struct {
 type Register struct {
 	FirstName string `json:"first_name" binding:"required"`
 	LastName  string `json:"last_name" binding:"required"`
+	Email     string `json:"email" binding:"required"`
 	IP        string `json:"-"`
+}
+
+type RefreshRequest struct {
+	AccessToken  string `form:"access_token" binding:"required" header:"access_token"`
+	RefreshToken string `form:"refresh_token" binding:"required" header:"refresh_token"`
+	IP           string `json:"-"`
 }
